<resources>
    <string name="app_name">jmart-android</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="name">Name</string>
    <string name="don_t_have_account_nregister_now">Don\'t Have Account?\nRegister Now!</string>
    <string name="hello_user">Hello User!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="go">GO</string>
    <string name="lowest_price">lowest Price</string>
    <string name="to">to</string>
    <string name="product_condition">Product Condition</string>
    <string name="newBox">New</string>
    <string name="usedBox">Used</string>
    <string name="product_category">Product Category</string>
    <string name="account_details">Account Details</string>
    <string name="balance">Balance</string>
    <string name="_0_0">0.0</string>
    <string name="top_up_amount">Top Up Amount</string>
    <string name="top_up">TOP UP</string>
    <string name="register_store">REGISTER STORE</string>
    <string name="register_store_low">Register Store</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">REGISTER</string>
    <string name="cancel">CANCEL</string>
    <string name="store">Store</string>
    <string name="create_product">Create Product</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="condition">Condition</string>
    <string name="category">Category</string>
    <string name="shipment_plan">Shipment Plan</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="add_box">Add Box</string>
    <string name="person">Person</string>
    <string name="product_name">Product Name</string>
    <string name="apply">APPLY</string>
    <string name="highest_price">Highest Price</string>
    <string name="products">PRODUCTS</string>
    <string name="filter">FILTER</string>
    <string name="clear">CLEAR</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="buy_now">Buy Now</string>
    <string name="payment_confirmation">Payment Confirmation</string>
    <string name="product_details">Product Details</string>
    <string name="qty">Qty</string>
    <string name="final_price">Final Price</string>
    <string name="your_balance">Your Balance</string>
    <string name="_1">1</string>
    <string name="no">#No</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="cost">Cost</string>
    <string name="history_detail">History Detail</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_user">Invoice User</string>
    <string name="accept">Accept</string>
    <string name="submit">Submit</string>
    <string name="input_receipt">Input Receipt</string>
    <string name="input_no_receipt">Input no Receipt</string>
</resources>