<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/iptName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:inputType="textEmailAddress"
        android:hint="@string/name"
        android:lines="1" />

    <EditText
        android:id="@+id/iptEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:lines="1" />

    <EditText
        android:id="@+id/iptPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:lines="1" />

    <Button
        android:id="@+id/butLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/login"
        android:backgroundTint="@color/blue_200"/>

</LinearLayout>